--- a/app/data/information/informationOverview/overviewTaxonomy/overviewTaxonomy.html
+++ b/app/data/information/informationOverview/overviewTaxonomy/overviewTaxonomy.html
@@ -1,11 +1,15 @@
-<p>The UI-Kitchen-Sinks represents the specification, classification, documentation and illustration of UI-Elements in ILIAS.
-    It should help:
-<ul>
-    <li>Developers to find the right UI-Element for their context</li>
-    <li>Customers to check for available resources to fullfill their needs</li>
-    <li>Designers to find the the correct less variables to adapt</li>
-    <li>Testers to check if a feature is implemented according to UI-Guidelines</li>
-    <li>End-Users to have a more streamlined user experience with ILIAS</li>
-</ul>
-</p>
+<p>We organise the inventory around two major concepts:</p>
 
+<ul>
+    <li>Aggregation:</li>
+    <ul>
+        <li>Elements: Elements are the smallest items in the UI that can be considered ‘whole’.</li>
+        <li>Collections: Collections combine elements.</li>
+        <li>Layouts: Layouts outline how elements and collections are put together to something greater than a collection.</li>
+    </ul>
+    <li>Interactivity</li>
+    <ul>
+        <li>Interactive: An entry is considered to be ‘interactive’ if one clicks on the respective control and then something happens.</li>
+        <li>Non-interactive:  An entry is considered to be ‘non-interactive’ if information is to be taken from it but no clicking is to be expected.</li>
+    </ul>
+</ul>
