--- a/app/data/interactiveCollections/interactiveCollectionsModals/lightboxModal/lightboxModal.html
+++ b/app/data/interactiveCollections/interactiveCollectionsModals/lightboxModal/lightboxModal.html
@@ -1,3 +1,3 @@
-<img class="img-responsive center-block" src="/app/data/interactiveCollections/interactiveCollectionsModals/roundTripModal/roundTripModal.png"
-     alt="Novelty Counter">
-Todo: Replace this image with the actual DOM
+<img class="img-responsive center-block" src="/app/data/interactiveCollections/interactiveCollectionsModals/lightboxModal/lightboxModal.png"
+     alt="Lightbox Modal">
+Todo: Replace this image with the actual DOM. This screenshot is a current ILIAS implementation (5.1) the output of the refactored PHP-Class in a future version of ILIAS needs to follow the listed rules bellow.
