--- a/app/data/interactiveCollections/interactiveCollectionsModals/roundTripModal/roundTripModal.html
+++ b/app/data/interactiveCollections/interactiveCollectionsModals/roundTripModal/roundTripModal.html
@@ -1,3 +1,3 @@
 <img class="img-responsive center-block" src="/app/data/interactiveCollections/interactiveCollectionsModals/roundTripModal/roundTripModal.png"
-     alt="Novelty Counter">
+     alt="Round Trip Modal">
 Todo: Replace this image with the actual DOM
