--- a/app/src/content/center/entry/entryRelations.tpl.html
+++ b/app/src/content/center/entry/entryRelations.tpl.html
@@ -11,16 +11,14 @@
         <dl class="dl-horizontal">
             <dt ng-if="entry.fullRelations.isA">Is a</dt>
             <dd ng-if="entry.fullRelations.isA">
-                <a href="#content{{entry.fullRelations.isA.item.path}}">{{entry.fullRelations.isA.subCategory.title}}: {{entry.fullRelations.isA.itemGroup.title}} {{entry.fullRelations.isA.item.title}}</a>
+                <a href="#content{{entry.fullRelations.isA.item.path}}">{{entry.fullRelations.isA.item.title}}</a>
             </dd>
             <dt ng-if="entry.fullRelations.children">Children</dt>
             <dd>
                 <span ng-repeat="(id,usage) in entry.fullRelations.children">
-                    <li>
                         <a href="#content{{usage.item.path}}">
-                            {{usage.subCategory.title}}: {{usage.itemGroup.title}} {{usage.item.title}}
+                            {{usage.item.title}};
                         </a>
-                    </li>
                 </span>
             </dd>
             <dt ng-if="entry.fullRelations.mustUse">Must use</dt>
@@ -28,7 +26,7 @@
                 <span ng-repeat="(id,usage) in entry.fullRelations.mustUse">
                     <li>
                         <a href="#content{{usage.item.path}}">
-                            {{usage.subCategory.title}}: {{usage.itemGroup.title}} {{usage.item.title}}
+                             {{usage.item.title}}
                         </a>
                     </li>
                 </span>
@@ -38,7 +36,7 @@
                 <span ng-repeat="(id,usage) in entry.fullRelations.mayUse">
                     <li>
                         <a href="#content{{usage.item.path}}">
-                            {{usage.subCategory.title}}: {{usage.itemGroup.title}} {{usage.item.title}}
+                            {{usage.item.title}}
                         </a>
                     </li>
                 </span>
@@ -48,7 +46,7 @@
                 <span ng-repeat="(id,usage) in entry.fullRelations.mustBeUsedBy">
                     <li>
                         <a href="#content{{usage.item.path}}">
-                            {{usage.subCategory.title}}: {{usage.itemGroup.title}} {{usage.item.title}}
+                             {{usage.item.title}}
                         </a>
                     </li>
                 </span>
@@ -58,7 +56,7 @@
                 <span ng-repeat="(id,usage) in entry.fullRelations.mayBeUsedBy">
                     <li>
                         <a href="#content{{usage.item.path}}">
-                            {{usage.subCategory.title}}: {{usage.itemGroup.title}} {{usage.item.title}}
+                            {{usage.item.title}}
                         </a>
                     </li>
                 </span>
