--- a/app/data/interactiveCollections/interactiveCollectionsModals/interruptiveModal/interruptiveModal.html
+++ b/app/data/interactiveCollections/interactiveCollectionsModals/interruptiveModal/interruptiveModal.html
@@ -1,16 +1,1 @@
-
-<div class="btn-group" role="group" aria-label="...">
-    <button type="button" class="btn btn-default">Download</button>
-    <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            More
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-            <li><a href="#">Unzip</a></li>
-            <li><a href="#">Rename</a></li>
-        </ul>
-    </div>
-</div>
-
-<br><br>
+Todo: Create interruptive Modal with the actual DOM.
