Added auto tests

--- a/app/data/interactiveCollections/interactiveCollectionsForms/titledFormSection/titledFormSection.html
+++ b/app/data/interactiveCollections/interactiveCollectionsForms/titledFormSection/titledFormSection.html
@@ -1,3 +1,7 @@
 <img class="img-responsive center-block" src="/app/data/interactiveCollections/interactiveCollectionsForms/titledFormSection/titledFormSection.png"
      alt="titledFormSection">
+<!-- Standard button -->
+<button type="button" class="btn btn-default il-button">Default</button>
+<button type="button" class="btn btn-default il-testing">Testing 1</button>
+<button type="button" class="btn btn-default il-testing">Testing 2</button>
 Todo: Replace this image with the actual DOM. This screenshot is a current ILIAS implementation (5.1) the output of the refactored PHP-Class in a future version of ILIAS needs to follow the listed rules
