--- a/app/src/header/headerTopNav/headerTopNav.tpl.html
+++ b/app/src/header/headerTopNav/headerTopNav.tpl.html
@@ -4,6 +4,9 @@
             <span class="glyphicon glyphicon-wrench"></span>
         </a>
     </li>
+
     <header-top-nav-visibity>
     </header-top-nav-visibity>
+    <header-top-nav-test>
+    </header-top-nav-test>
 </ul>
